--- a/api-reference/mocking-apis/argument-matchers.mdx
+++ b/api-reference/mocking-apis/argument-matchers.mdx
@@ -1,410 +1,375 @@
 ---
 title: "Argument Matchers"
-description: "Reference for built-in and custom argument matchers in GoogleMock. Harness expressive matching for precise verification of mock interactions, with documentation on core and extension points for matchers."
+description: "Provides a detailed reference for argument matchers—both standard and custom—for verifying the values passed to mock methods. Illustrates patterns for flexible and expressive call verification."
 ---
 
-# Argument Matchers Reference
+# Argument Matchers
 
-Harness the full power of GoogleMock's argument matchers to precisely verify mock interactions in your C++ unit tests. This comprehensive guide covers all built-in and custom argument matchers, empowering you to express complex expectations effectively.
-
----
-
-## Overview
-
-Argument matchers serve as predicates on *single* function arguments. When setting expectations on mocked methods using `EXPECT_CALL()` or defining default behaviors with `ON_CALL()`, these matchers allow you to specify and verify the properties or values of arguments passed during mock interactions.
-
-Beyond mocking, you can also use matchers directly to assert any value using `EXPECT_THAT(value, matcher)` or `ASSERT_THAT(value, matcher)`. This approach offers expressive and human-readable assertions with rich failure diagnostics.
-
-**Key Practices:**
-
-- Prefer explicit equality matchers like `Eq()` over implicit conversions to avoid surprises.
-- Use polymorphic matchers (`Eq(v)`, `Ge(v)`, etc.) for maximum flexibility across types.
-- Leverage composite matchers like `AllOf()`, `AnyOf()`, and `Not()` to build expressive compound conditions.
+This page provides a detailed reference on *argument matchers* in GoogleMock, the mechanism used to verify values passed to mock methods. Matchers empower you to write expressive and flexible expectations that validate how your code under test interacts with mocks. Whether matching exact values, ranges, or complex conditions, argument matchers help you build precise and robust unit tests.
 
 ---
 
-## Wildcard Matchers
+## Overview of Argument Matchers
 
-| Matcher              | Description                             |
-| :------------------- | :------------------------------------ |
-| `_`                  | Matches any value of the expected type. |
-| `A<type>()` or `An<type>()` | Matches any value of the specified `type`. |
+Argument matchers in gMock are function objects used inside `EXPECT_CALL()` and `ON_CALL()` macros to specify how arguments to mock methods should be checked. They allow you to:
 
-**Effectiveness:** Use `_` when argument values are unimportant. Use `A<T>()` / `An<T>()` to restrict matches to specific types when overload resolution or type inference is tricky.
+- Validate exact or partial properties of arguments.
+- Match arguments flexibly using wildcards and predicates.
+- Compose matchers to express complex constraints.
 
----
+Matchers can be built-in ones, user-defined custom matchers, or matchers composed from simpler matchers.
 
-## Generic Comparison Matchers
 
-These matchers test the argument against a specified value or condition using fundamental comparison operators or predicates.
+## Using Argument Matchers
 
-| Matcher               | Description                                                          |
-| :-------------------- | :------------------------------------------------------------------- |
-| `Eq(value)` or `value`| Matches if argument `== value`.                                     |
-| `Ne(value)`           | Matches if argument `!= value`.                                     |
-| `Ge(value)`           | Matches if argument `>= value`.                                     |
-| `Gt(value)`           | Matches if argument `> value`.                                      |
-| `Le(value)`           | Matches if argument `<= value`.                                     |
-| `Lt(value)`           | Matches if argument `< value`.                                      |
-| `IsTrue()`            | Matches if argument evaluates to true in a boolean context.         |
-| `IsFalse()`           | Matches if argument evaluates to false in a boolean context.        |
-| `DistanceFrom(target, matcher)` | Matches if the distance between the argument and `target` matches `matcher`. Distance computed as `abs(argument - target)` by default. |
-| `DistanceFrom(target, get_distance, matcher)` | Matches if the distance computed by the functor `get_distance(argument, target)` matches `matcher`. |
-| `IsNull()`            | Matches any null raw or smart pointer.                             |
-| `NotNull()`           | Matches any non-null raw or smart pointer.                         |
-| `Optional(matcher)`   | Matches an engaged `optional<>` whose value matches `matcher`.    |
-| `VariantWith<T>(matcher)` | Matches a `variant<>` holding alternative of type T whose value matches `matcher`. |
-| `Ref(variable)`       | Matches an argument that is a reference to the given variable.
-
-**Note:** Except for `Ref()`, these matchers copy their stored values to ensure lasting validity. For non-copyable types, wrap arguments in `std::ref(...)` but ensure the referenced object remains alive and unmodified after setting the expectation.
-
----
-
-## Floating-Point Matchers
-
-Floating-point comparisons are complex due to rounding and special values like NaN. GoogleMock provides ULP-based comparison matchers that handle these complexities gracefully.
-
-| Matcher                          | Description                                                          |
-| :-------------------------------| :------------------------------------------------------------------- |
-| `DoubleEq(double)`               | Matches `double` values approximately equal to the argument, considering two NaNs as unequal. |
-| `FloatEq(float)`                 | Matches `float` values approximately equal to the argument, considering two NaNs as unequal. |
-| `NanSensitiveDoubleEq(double)`  | Matches `double` values approximately equal to the argument, considering two NaNs as equal. |
-| `NanSensitiveFloatEq(float)`    | Matches `float` values approximately equal to the argument, considering two NaNs as equal. |
-| `DoubleNear(double, max_error)` | Matches a `double` that is within `max_error` absolute distance of the argument, two NaNs unequal. |
-| `FloatNear(float, max_error)`   | Matches a `float` that is within `max_error` absolute distance of the argument, two NaNs unequal. |
-| `NanSensitiveDoubleNear(double, max_error)` | Matches a `double` close to the argument within `max_error` and treats NaNs as equal. |
-| `NanSensitiveFloatNear(float, max_error)`   | Matches a `float` close to the argument within `max_error` and treats NaNs as equal. |
-| `IsNan()`                       | Matches any floating-point value that is NaN.                        |
-
-**Usage Example:**
+When you write an expectation such as:
 
 ```cpp
-EXPECT_THAT(result, DoubleNear(3.14, 0.01));
-EXPECT_THAT(value, IsNan());
+EXPECT_CALL(mock_obj, MethodName(matcher1, matcher2));
 ```
 
----
+`matcher1` and `matcher2` describe what arguments are expected. If an argument matches the matcher, the expectation applies.
 
-## String Matchers
 
-Matchers capable of validating string contents using exact match, substring, prefix, suffix, and regular expressions. Supports narrow and wide strings.
+## Categories of Matchers
 
-| Matcher                      | Description                                                         |
-| :---------------------------| :------------------------------------------------------------------ |
-| `StrEq(string)`              | Matches a string exactly equal to the argument, case-sensitive.    |
-| `StrNe(string)`              | Matches strings not equal to the argument.                         |
-| `StrCaseEq(string)`          | Matches strings equal ignoring case.                               |
-| `StrCaseNe(string)`          | Matches strings not equal ignoring case.                           |
-| `HasSubstr(string)`          | Matches strings containing the given substring.                   |
-| `StartsWith(prefix)`         | Matches strings starting with `prefix`.                            |
-| `EndsWith(suffix)`           | Matches strings ending with `suffix`.                              |
-| `ContainsRegex(regex_pattern)` | Matches strings matching the provided regex anywhere.             |
-| `MatchesRegex(regex_pattern)` | Matches strings matching the regex fully (from start to end).     |
-| `WhenBase64Unescaped(matcher)` | Matches a base64-url-safe encoded string whose decoded value matches `matcher`. |
-| `IsEmpty()`                  | Matches empty strings or containers.                              |
+### Wildcard Matchers
 
-**Examples:**
+| Matcher                           | Description                                       |
+| -------------------------------- | ------------------------------------------------ |
+| `_`                              | Matches anything. The argument can be any value of the correct type. |
+| `A<type>()` or `An<type>()`      | Matches any value of the specified type `type`.                      |
+
+Example:
 
 ```cpp
-EXPECT_THAT(str, StartsWith("Hello"));
-EXPECT_THAT(str, ContainsRegex("foo.*bar"));
-EXPECT_THAT(base64_encoded, WhenBase64Unescaped(EndsWith("!")));
+EXPECT_CALL(foo, DoSomething(_)); // Any argument
+EXPECT_CALL(bar, Process(An<int>())); // Any int argument
 ```
 
----
 
-## Exception Matchers
+### Generic Comparison Matchers
 
-Matchers for verifying exceptions thrown by callable objects.
+These match argument values by applying standard comparisons:
 
-| Matcher                         | Description                                    |
-| :------------------------------| :---------------------------------------------|
-| `Throws<E>()`                   | Matches callables that throw an exception of type `E`. |
-| `Throws<E>(matcher)`            | Matches callables that throw an exception of type `E` satisfying `matcher`. |
-| `ThrowsMessage<E>(matcher)`     | Matches callables that throw an exception of type `E` whose `.what()` message matches `matcher`. |
+| Matcher          | Meaning                                                       |
+| ---------------- | ------------------------------------------------------------- |
+| `Eq(value)`      | Argument == value                                              |
+| `Ne(value)`      | Argument != value                                              |
+| `Gt(value)`      | Argument > value                                               |
+| `Ge(value)`      | Argument >= value                                              |
+| `Lt(value)`      | Argument < value                                               |
+| `Le(value)`      | Argument <= value                                              |
+| `IsTrue()`       | Argument evaluates to true                                     |
+| `IsFalse()`      | Argument evaluates to false                                    |
+| `IsNull()`       | Argument is a null pointer (raw or smart)                      |
+| `NotNull()`      | Argument is non-null pointer (raw or smart)                    |
+| `Optional(m)`    | For an `optional<>` argument, the contained value matches `m` |
+| `Ref(variable)`  | Argument is a reference to `variable`                         |
+| `TypedEq<T>(value)` | Argument of type `T` equal to `value`                        |
 
-**Example:**
+*Note:* `Ref()` matches reference identity and is helpful when you want to ensure that the exact object instance is passed.
+
+Example:
 
 ```cpp
-auto lambda = [] { throw std::runtime_error("error msg"); };
-EXPECT_THAT(lambda, Throws<std::runtime_error>());
-EXPECT_THAT(lambda, Throws<std::runtime_error>(HasSubstr("error")));
-EXPECT_THAT(lambda, ThrowsMessage<std::runtime_error>(StrEq("error msg")));
+EXPECT_CALL(foo, Bar(Eq(10)));          // Matches argument == 10
+EXPECT_CALL(foo, Baz(NotNull()));      // Matches any non-null pointer
+EXPECT_CALL(foo, SetValue(Ref(my_var))); // Matches call with reference to my_var
 ```
 
----
 
-## Container Matchers
+### Floating-Point Matchers
 
-Matchers tailored to validate STL-style container contents and properties with rich failure messages.
+Floating-point values can be matched approximately, accounting for small rounding errors.
 
-| Matcher                                | Description                                                            |
-| :-------------------------------------| :--------------------------------------------------------------------- |
-| `IsEmpty()`                           | Matches empty containers (`container.empty()`).                         |
-| `SizeIs(matcher)`                    | Matches containers whose size matches `matcher`.                      |
-| `BeginEndDistanceIs(matcher)`        | Matches containers where the distance between `begin()` and `end()` matches `matcher`. Useful when `size()` is not available. |
-| `ContainerEq(container)`             | Matches containers equal to `container`, with detailed diff on mismatch. |
-| `Contains(value_or_matcher)`         | Matches containers containing at least one element matching the value or matcher. Supports `.Times(n)` modifier to assert count. |
-| `Each(value_or_matcher)`             | Matches containers whose *every* element matches `value_or_matcher`.  |
-| `ElementsAre(m0, m1, ..., mn)`       | Matches containers with exactly `n+1` elements matching the matchers in order. |
-| `ElementsAreArray(sequence)`         | Like `ElementsAre()`, but takes a container, array, or initializer list for matchers/values. |
-| `UnorderedElementsAre(m0, m1, ..., mn)` | Matches containers with exactly `n+1` elements matching the matchers under *any* permutation. |
-| `UnorderedElementsAreArray(sequence)` | Like `UnorderedElementsAre()`, but takes a container, array, or initializer list. |
-| `IsSubsetOf(sequence)`               | Matches containers whose elements form a subset matching given sequence of matchers/values. |
-| `IsSupersetOf(sequence)`             | Matches containers containing a superset matching given sequence of matchers/values. |
-| `Pointwise(pair_matcher, sequence)`  | Matches containers element-wise using pairs `(actual_element, expected_element)` matched against `pair_matcher`. Order matters. |
-| `UnorderedPointwise(pair_matcher, sequence)` | Like `Pointwise`, but ignores the order of elements. |
-| `WhenSorted(matcher)`                | Matches containers that match matcher `m` when sorted using `<`.       |
-| `WhenSortedBy(comparator, matcher)` | Matches containers that match matcher `m` when sorted with `comparator`. |
+| Matcher                         | Description                                                               |
+| ------------------------------- | ------------------------------------------------------------------------- |
+| `DoubleEq(value)`               | Approximate equality for `double` (excluding NaNs as equal)               |
+| `FloatEq(value)`                | Approximate equality for `float` (excluding NaNs as equal)                |
+| `NanSensitiveDoubleEq(value)`  | Approximate equality for `double`, treating NaNs as equal                |
+| `NanSensitiveFloatEq(value)`   | Approximate equality for `float`, treating NaNs as equal                 |
+| `DoubleNear(value, max_error)` | Equality with max absolute error tolerance for `double`                 |
+| `FloatNear(value, max_error)`  | Equality with max absolute error tolerance for `float`                  |
 
-**Important Tips:**
-
-- `ElementsAre*` are order-sensitive; prefer `UnorderedElementsAre*` for containers without defined element order such as unordered maps.
-- Compose matchers for nested containers by nesting `ElementsAre()`, `UnorderedElementsAre()`, etc.
-- Use `Pointee(...)` to match the dereferenced values for pointers to containers or nested pointers.
-
----
-
-## Member Matchers
-
-Designed to match fields, properties, keys, and pairs inside structured types.
-
-| Matcher                                            | Description                                                        |
-| :-------------------------------------------------| :-----------------------------------------------------------------|
-| `Field(&Class::field, matcher)`                   | Matches object whose field `field` matches `matcher`.             |
-| `Field(name, &Class::field, matcher)`              | Same as above, but includes field name for improved diagnostics. |
-| `Property(&Class::property, matcher)`             | Matches object whose `property()` method result matches `matcher`.
-  **Note:** `property()` must be `const` and have zero arguments. Avoid using on methods you do not own. |
-| `Property(name, &Class::property, matcher)`        | Same as above with additional `property` name for better messages. |
-| `Key(matcher)`                                    | Matches a `std::pair` whose `.first` matches `matcher`. Useful for map keys. |
-| `Pair(matcher1, matcher2)`                        | Matches a `std::pair` whose `.first` and `.second` match `matcher1` and `matcher2` respectively. |
-| `Address(matcher)`                                | Matches object whose address matches `matcher`.                    |
-| `WhenDynamicCastTo<T>(matcher)`                   | Matches pointer or reference dynamically casted to `T` and matched against `matcher`. Requires RTTI.
-
-**Example:**
+Example:
 
 ```cpp
-EXPECT_THAT(foo, Field(&Foo::count, Ge(10)));
-EXPECT_THAT(map, Contains(Key(Le(5))));
-EXPECT_THAT(pair, Pair(Ge(0), HasSubstr("ok")));
+EXPECT_CALL(foo, Compute(DoubleEq(3.14)));
+EXPECT_CALL(bar, SetThreshold(FloatNear(1.5, 0.001)));
 ```
 
----
 
-## Matching the Result of a Function, Functor, or Callback
+### String Matchers
 
-| Matcher                                     | Description                                     |
-| :------------------------------------------| :----------------------------------------------|
-| `ResultOf(f, matcher)`                     | Matches if `f(argument)` matches `matcher`.    |
-| `ResultOf(description, f, matcher)`       | Same as above, with better failure message labeling with `description`. |
+You can match strings (C strings, C++ `std::string`, or compatible types) with:
 
-**Example:**
+| Matcher                      | Description                                         |
+| ---------------------------- | --------------------------------------------------- |
+| `StrEq(string)`              | Exact equality                                      |
+| `StrNe(string)`              | Not equal                                          |
+| `StrCaseEq(string)`          | Equality ignoring case                             |
+| `StrCaseNe(string)`          | Inequality ignoring case                           |
+| `HasSubstr(string)`          | Contains substring                                 |
+| `StartsWith(prefix)`         | Starts with the prefix                             |
+| `EndsWith(suffix)`           | Ends with the suffix                               |
+| `MatchesRegex(regex)`        | Matches entire string using regex                  |
+| `ContainsRegex(regex)`       | Contains substring matching regex                  |
+| `IsEmpty()`                  | Is empty string                                    |
+| `WhenBase64Unescaped(matcher)` | Treats argument as unescaped base64, matches resulting string          |
+
+Example:
 
 ```cpp
-EXPECT_THAT(obj, ResultOf(&Foo::GetName, StartsWith("John")));
+EXPECT_CALL(foo, Print(StrEq("Hello")));
+EXPECT_CALL(bar, Validate(HasSubstr("error")));
+EXPECT_CALL(baz, Fetch(MatchesRegex("\d+")));
 ```
 
----
 
-## Pointer Matchers
+### Container Matchers
 
-Enrich pointer matching beyond null tests.
+Matchers specially designed to verify STL-style containers:
 
-| Matcher                 | Description                                                   |
-| :---------------------- | :------------------------------------------------------------|
-| `Pointee(matcher)`      | Matches if pointer (raw or smart) points to a value matching `matcher`. Null pointers always fail. |
-| `Pointer(matcher)`      | Matches if pointer (raw or smart) itself matches `matcher`. This allows checking the pointer value itself.
-|
-| `Address(matcher)`      | Matches if the address of the argument matches `matcher`.     |
-| `WhenDynamicCastTo<T>(matcher)` | Matches argument dynamically cast to type `T` against `matcher`. Matches null if cast fails (pointer version); fails immediately if cast fails (reference version). Requires RTTI. |
+| Matcher                        | Description                                                    |
+| ------------------------------ | -------------------------------------------------------------- |
+| `Contains(value|matcher)`      | Container contains at least one element matching the matcher/value |
+| `Each(matcher)`                | All elements of container match the matcher                   |
+| `ElementsAre(...)`             | Match elements in order with given matchers                   |
+| `ElementsAreArray(...)`        | Like `ElementsAre()`, from array/container/initializer list    |
+| `UnorderedElementsAre(...)`    | Like `ElementsAre()`, but elements can be in any order        |
+| `UnorderedElementsAreArray(...)` | Like `UnorderedElementsAre()`, from array/container/initializer list |
+| `SizeIs(matcher)`              | Container size matches                                             |
+| `IsEmpty()`                   | Container is empty                                            |
+| `IsSubsetOf(...)`             | Container is subset of expected elements                      |
+| `IsSupersetOf(...)`           | Container is superset of expected elements                    |
+| `Pointwise(matcher, container)` | Element-wise matching against container                       |
+| `UnorderedPointwise(matcher, container)` | Like `Pointwise`, ignores order                            |
 
-**Example:**
+Example:
 
 ```cpp
-EXPECT_CALL(mock, Foo(Pointee(Ge(5))));
-EXPECT_THAT(ptr, Pointer(nullptr));
-EXPECT_THAT(obj, Address(Eq(&target)));
+EXPECT_CALL(foo, ProcessData(ElementsAre(1, Gt(2), _)));
+EXPECT_CALL(bar, HandleMap(UnorderedElementsAre(Pair(42, "Answer"))));
+EXPECT_CALL(baz, Store(Each(Gt(0))));
 ```
 
----
 
-## Multi-Argument Matchers
+### Member Matchers
 
-Although matchers match single arguments, GoogleMock allows matching a tuple of arguments from a mock function call using these special matchers:
+You can match a member or property of an argument object with these:
 
-| Matcher           | Description                                                              |
-| :-----------------| :------------------------------------------------------------------------|
-| `Eq()`            | Matches a 2-tuple `(x,y)` where `x == y`.                              |
-| `Ge()`            | Matches 2-tuple `(x,y)` where `x >= y`.                                |
-| `Gt()`            | Matches 2-tuple `(x,y)` where `x > y`.                                 |
-| `Le()`            | Matches 2-tuple `(x,y)` where `x <= y`.                                |
-| `Lt()`            | Matches 2-tuple `(x,y)` where `x < y`.                                 |
-| `Ne()`            | Matches 2-tuple `(x,y)` where `x != y`.                                |
-| `AllArgs(matcher)`| Matches all arguments as a tuple against `matcher`. Equivalent to `matcher` itself, syntactic sugar useful with `.With()`. |
-| `Args<N1, N2, ..., Nk>(matcher)` | Matches selected function arguments (by zero-based indices) as a tuple against `matcher`.
+| Matcher                                      | Description                                        |
+| -------------------------------------------- | ------------------------------------------------- |
+| `Field(&Class::field, matcher)`               | Matches if `argument.field` (or `argument->field`) matches `matcher` |
+| `Field(name, &Class::field, matcher)`         | Same as above, with custom name for error messages    |
+| `Property(&Class::method, matcher)`            | Matches if `argument.method()` matches matcher        |
+| `Property(name, &Class::method, matcher)`      | Same as above, with custom name for error messages    |
+| `Key(matcher)`                                | Matches if `argument.first` matches matcher            |
+| `Pair(matcher1, matcher2)`                     | Matches if `argument.first` and `argument.second` match matchers |
+| `FieldsAre(matcher...)`                        | Matches tuple-like object field-wise                     |
 
-**Example Usage:**
+Example:
 
 ```cpp
-EXPECT_CALL(mock, Func(_, _)).With(Lt()); // first argument is less than second
-EXPECT_CALL(mock, Func(_, _, _)).With(Args<0, 2>(Ge()));
+EXPECT_CALL(foo, Update(Field(&MyClass::number, Ge(3))));
+EXPECT_CALL(foo, Render(Property(&Window::title, StartsWith("Error"))));
+EXPECT_CALL(foo, Insert(Key(Eq(42))));
+EXPECT_CALL(foo, SetPair(Pair(_, Lt(0))));
 ```
 
----
 
-## Composite Matchers
+### Matching the Result of a Function or Callback
 
-Build complex conditions by logically combining multiple matchers.
+You can match the result of a callable applied to the argument:
 
-| Matcher                       | Description                                    |
-| :-----------------------------| :---------------------------------------------|
-| `AllOf(m1, m2, ..., mn)`      | Matches if all of `m1`, ..., `mn` match.         |
-| `AnyOf(m1, m2, ..., mn)`      | Matches if any of `m1`, ..., `mn` matches.       |
-| `Not(matcher)`                | Matches if `matcher` does *not* match.          |
-| `Conditional(cond, m1, m2)`  | Matches `m1` if `cond` is true; else matches `m2`.
+| Matcher                                | Description                                         |
+| ------------------------------------- | --------------------------------------------------- |
+| `ResultOf(f, matcher)`                 | Matches if `f(argument)` matches `matcher`           |
+| `ResultOf(description, f, matcher)`   | Same as above, using description in error messages   |
 
-**Example:**
+Example:
 
 ```cpp
-EXPECT_CALL(mock, Foo(AllOf(Gt(5), Ne(10))));
-EXPECT_THAT(value, Not(Eq(0)));
+EXPECT_CALL(foo, DoSomething(ResultOf(&foo.GetName, StrEq("John"))));
 ```
 
----
 
-## Adapters for Matchers
+### Pointer Matchers
 
-| Matcher                    | Description                                   |
-| :-------------------------| :----------------------------------------------|
-| `MatcherCast<T>(m)`       | Casts matcher `m` to type `Matcher<T>`. Use carefully; may bypass type safety. |
-| `SafeMatcherCast<T>(m)`   | Safely casts matcher `m` to `Matcher<T>`, verifying implicit convertibility without loss (recommended over `MatcherCast`). |
-| `Truly(predicate)`        | Turns a unary predicate function or functor into a matcher. Matches if predicate returns something boolean-convertible to true.
+Matching pointers and what they point to:
 
----
+| Matcher                            | Description                                   |
+| ---------------------------------- | --------------------------------------------- |
+| `IsNull()`                        | Matches `NULL` pointers (raw and smart)        |
+| `NotNull()`                      | Matches non-NULL pointers (raw and smart)      |
+| `Pointer(matcher)`               | Matches pointer value against matcher          |
+| `Pointee(matcher)`              | Matches the value pointed to by pointer matches matcher |
+| `Address(matcher)`              | Matches whether `&argument` matches matcher     |
+| `WhenDynamicCastTo<T>(matcher)` | Matches if `dynamic_cast<T>(argument)` matches matcher |
+
+You can combine `Pointee` multiple times to match deeply nested pointers.
+
+Example:
+
+```cpp
+EXPECT_CALL(foo, Save(Pointee(Gt(0))));
+EXPECT_CALL(bar, SetPtr(Address(Ne(nullptr))));
+EXPECT_CALL(baz, CastedPtr(WhenDynamicCastTo<Derived*>(NotNull())));
+```
+
+
+## Composing and Combining Matchers
+
+Matchers can be combined to express compound conditions:
+
+| Matcher                              | Description                                |
+| ----------------------------------- | ------------------------------------------ |
+| `AllOf(m1, m2, ..., mn)`            | Matches if *all* `m1` to `mn` match       |
+| `AnyOf(m1, m2, ..., mn)`            | Matches if *any* of `m1` to `mn` match    |
+| `Not(m)`                           | Matches if `m` does not match               |
+| `Conditional(cond, m1, m2)`         | Matches `m1` if `cond` is true, otherwise `m2` |
+
+Example:
+
+```cpp
+EXPECT_CALL(foo, Process(AllOf(Gt(0), Ne(2))));
+EXPECT_CALL(bar, Check(Not(IsNull())));
+```
+
 
 ## Using Matchers as Predicates
 
-Matchers implement predicate semantics and can be used directly as unary predicates.
+You can use matchers as predicates (unary functions returning bool) with:
 
-| Matcher                              | Description                                 |
-| :-----------------------------------| :--------------------------------------------|
-| `Matches(matcher)`                   | Returns a predicate functor that returns true if the value matches `matcher`. |
-| `ExplainMatchResult(matcher, value, listener)` | Evaluates whether `value` matches the `matcher`, streaming explanation to `listener`. |
-| `Value(value, matcher)`              | Evaluates to true if `value` matches `matcher`. Useful as a convenience function.
+- `Matches(m)` returns a predicate functor
+- `ExplainMatchResult(m, value, listener)` explains matching result
+- `Value(value, m)` returns true if `value` matches `m`
 
----
+This enables integration with STL algorithms and custom logic.
+
+Example:
+
+```cpp
+std::count_if(container.begin(), container.end(), Matches(Ge(10)));
+```
+
 
 ## Defining Custom Matchers
 
-GoogleMock provides flexible facilities to write your own matchers, either quickly using macros or more rigorously by implementing interfaces.
+For most use cases, the built-in matchers suffice, but you can create custom matchers for specialized validation:
 
-### Using the `MATCHER*` Macros
-
-- `MATCHER(name, description) { /* return bool; */ }` defines a matcher named `name()`.
-- `MATCHER_P(name, param, description) { /* return bool; */ }` defines a parameterized matcher.
-- Up to `MATCHER_P10` support multiple parameters.
-
-**Inside the matcher body:**
-
-- `arg` is the value being matched.
-- For parameterized matchers, parameters are available by name.
-- You can stream additional failure info to `*result_listener`.
-
-**Example:**
+- Use the `MATCHER` macro for simple custom matchers:
 
 ```cpp
 MATCHER(IsEven, "") { return (arg % 2) == 0; }
-MATCHER_P(IsDivisibleBy, n, "") {
-  if (arg % n == 0) return true;
-  *result_listener << "remainder: " << (arg % n);
-  return false;
-}
 ```
 
-Use such matchers:
+- Use `MATCHER_P`, `MATCHER_P2`, ... for parameterized matchers.
+- For more complex matchers with control over explanation and description, implement the matcher interface directly.
+- For polymorphic matchers usable with multiple types, use `MakePolymorphicMatcher` and provide template `MatchAndExplain`.
 
-```cpp
-EXPECT_CALL(mock, Foo(IsEven()));
-EXPECT_THAT(value, IsDivisibleBy(5));
-```
-
-### Writing New Matcher Classes
-
-For more control or performance, implement matcher interfaces directly:
-
-- Provide `MatchAndExplain(value, listener): bool`.
-- Provide `DescribeTo(ostream*)` and optionally `DescribeNegationTo(ostream*)`.
-- Add typedef `is_gtest_matcher`.
-
-Then create a factory function returning `testing::Matcher<YourType>`.
-
----
-
-## Practical Tips & Best Practices
-
-- Use `ON_CALL()` to define default mock behaviors without imposing expectations; use `EXPECT_CALL()` when verifying calls actively.
-- Use `NiceMock<T>` or `StrictMock<T>` to suppress or enforce warnings on uninteresting calls.
-- Use `SafeMatcherCast<T>` for compatible cross-type matcher conversions to ensure safety.
-- Wrap non-copyable arguments with `std::ref()` to avoid copying issues in matchers.
-- Combine matchers with `AllOf()`, `AnyOf()`, and `Not()` to create powerful conditions.
-- Use `FieldsAre()` and member matchers to focus assertions on specific parts of complex objects.
-- Nested matchers and adapters like `Pointee()` can handle deep data structures and pointers gracefully.
-- In multi-argument contexts, use tuple matchers like `Args<>` and relation matchers like `Lt()` to validate argument relations.
-
----
-
-## Example: Matching a Pointer to a Value In Range
-
-```cpp
-EXPECT_CALL(mock, Foo(Pointee(AllOf(Ge(5), Le(10)))));
-```
-
-This expects `mock.Foo()` to be called with a pointer to a value between 5 and 10 inclusive.
-
-## Example: Matching Arguments with Complex Conditions
-
-```cpp
-// Expect first argument less than second
-EXPECT_CALL(mock, Bar(_, _))
-    .With(Lt());
-
-// Match only selected arguments of a method with many parameters
-EXPECT_CALL(mock, Foo(_, _, _, _, _))
-    .With(AllOf(Args<0, 2>(Gt(5)), Args<2, 4>(Lt(100))));
-```
-
-## Example: Defining a Custom Matcher
+Example:
 
 ```cpp
 MATCHER_P(IsDivisibleBy, n, "") {
   if (arg % n == 0) return true;
-  *result_listener << "remainder " << arg % n;
+  *result_listener << "remainder is " << (arg % n);
   return false;
 }
-
-EXPECT_CALL(mock, Foo(IsDivisibleBy(7)));
+EXPECT_CALL(mock, Foo(IsDivisibleBy(3)));
 ```
 
-## Further Reading & Related Pages
 
-- [Matchers Reference](https://github.com/google/googletest/blob/main/docs/reference/matchers.md) — covers all built-in matchers.
-- [Mocking Reference](https://github.com/google/googletest/blob/main/docs/reference/mocking.md) — guides on using mocks and expectations.
-- [gMock Cookbook](https://github.com/google/googletest/blob/main/docs/gmock_cook_book.md) — recipes for advanced mocking and defining custom matchers.
-- [Actions and Matchers in Practice](https://github.com/google/googletest/blob/main/guides/mocking-advanced-techniques/actions-and-matchers.md) — practical user guide.
+## Best Practices and Tips
+
+- Prefer explicit matchers like `Eq(value)` over relying on implicit conversions.
+- Use wildcard `_` when argument value is unimportant.
+- Use `ON_CALL` to set default behavior without enforcing expectations.
+- Use `EXPECT_CALL` to validate that calls happen as expected.
+- When matching complex arguments, prefer `SaveArg` actions combined with predicate matchers for clarity.
+- To avoid surprises, be careful when matching non-copyable or move-only types; use `std::ref` with matchers to match references without copying.
+- Use `SafeMatcherCast<T>(m)` when matching arguments of different but compatible types to ensure type safety.
+- Compose matchers using `AllOf`, `AnyOf`, and `Not` to express fine-grained conditions.
+- For containers, prefer specialized container matchers to get better error messages.
+- When matching pointers, `Pointee` is safer than manually combining `NotNull` and dereference.
+
+
+## Troubleshooting Common Pitfalls
+
+- **Unmatched calls:** Occur when the call arguments don't match any `EXPECT_CALL`. Use `--gmock_verbose=info` for call trace.
+- **Uninteresting calls warning:** Occurs when mock method invoked without an `EXPECT_CALL`. Use `NiceMock` to suppress warnings.
+- **Copy issues:** When arguments are non-copyable, wrap with `std::ref` in matchers to avoid copying.
+- **Overload ambiguity:** Use `Const()` or `TypedEq` wrappers to select correct overload.
+- **Move-only arguments:** Use lambdas or functors as actions; returning move-only types requires careful setup.
+
+
+## Example: Using Argument Matchers in a Test
+
+```cpp
+using ::testing::_;             // wildcard matcher
+using ::testing::Eq;            // exact value matcher
+using ::testing::Gt;            // greater-than matcher
+using ::testing::NotNull;       // non-null pointer matcher
+using ::testing::Pointee;       // value pointed to matcher
+using ::testing::HasSubstr;     // substring matcher
+using ::testing::SaveArg;       // action to save argument for later check
+using ::testing::Return;
+
+class MockFoo {
+ public:
+  MOCK_METHOD(bool, ProcessData, (const std::string& input, int* out), ());
+};
+
+TEST(FooTest, ProcessDataBehavior) {
+  MockFoo mock;
+
+  ON_CALL(mock, ProcessData(HasSubstr("ABC"), NotNull()))
+      .WillByDefault([&](const std::string& input, int* out) {
+         *out = static_cast<int>(input.size());
+         return true;
+      });
+
+  EXPECT_CALL(mock, ProcessData(Eq("ABC123"), Pointee(Gt(5))))
+      .Times(1);
+
+  int output = 0;
+  bool result = mock.ProcessData("ABC123", &output);
+
+  EXPECT_TRUE(result);
+  EXPECT_GT(output, 5);
+}
+```
+
 
 ---
 
-For detailed function prototypes, macro usage, and implementation details, explore the `gmock/gmock-matchers.h` header and associated test files in the GoogleTest repository.
+## Additional References
+
+- [gMock Cheat Sheet](https://github.com/google/googletest/blob/main/docs/gmock_cheat_sheet.md) – Quick syntax reference for mocks and matchers.
+- [Matchers Reference](reference/matchers.md) – Detailed descriptions of built-in matchers.
+- [gMock Cookbook](docs/gmock_cook_book.md) – Examples and recipes for advanced mocking.
+- [Mocking Reference](docs/reference/mocking.md) – Comprehensive guide for mock macros and expectations.
+
 
 ---
 
-## Troubleshooting Common Issues
+<Callout title="Tip">
+Always use matchers to check arguments in `EXPECT_CALL`. When in doubt about argument matching behavior, prefer explicit matchers like `Eq`, `Ne`, `Gt` for clarity.
+</Callout>
 
-- **Matcher type mismatch:** Use `SafeMatcherCast<T>(m)` to adjust matcher types safely.
-- **Unexpected match results:** Check for unintended implicit conversions; prefer explicit matchers like `Eq(value)`.
-- **Uninteresting calls warnings/errors:** Use `NiceMock` to suppress or `StrictMock` to enforce.
-- **Non-copyable arguments:** Wrap with `std::ref()` or use custom predicate matchers.
+
+<Callout title="Warning">
+Avoid using implicit argument conversions in matchers as it may cause unexpected successful matches. Use explicit matchers like `Eq(expected_value)` to make matching intent clear.
+</Callout>
+
+
+<Callout title="Note">
+Custom matchers should be pure functions without side effects, as gMock may call matchers multiple times or in unspecified contexts.
+</Callout>
+
 
 ---
 
-This reference equips you with all necessary tools to compose, combine, and customize argument matchers in GoogleMock, enhancing test expressiveness and reliability.
+<Source url="https://github.com/google/googletest" paths={[{"path": "docs/reference/matchers.md", "range": "1-669"}]} />
+
